# wmt-mist

./: README.md  answers.json  main.py  pyproject.toml
mist/datasets/: base_dataset.py  general_mt_dataset.py
mist/evaluators/: mt_evaluator.py
wmt_mist/: main.py  utils.py
wmt_mist/datasets/: base.py  evaluation_translation.py  judge_translation.py  translation.py
wmt_mist/evaluators/: base.py  translation.py
